--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </header>
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Our Works</b></h4><br>
+    <div class="w3-row-padding">
+      <div class="w3-third w3-container w3-margin-bottom">
+        <img src="1.jfif" alt="Norway" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Student Enrolment For Various Streams In Kerala</b></p>
+          <p>This is the plots and graphs that were generated from the Higher Education Data gathered.</p>
+        </div>
+      </div><br>
+      <div class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
     <h4><b>About Us</b></h4>
     <p>This project proposes to set up practices and framework for releasing public data in the Linked Open Data for the State of Kerala. In this regard, we propose to establish an Open Data Laboratory at Government College Kasaragod. Further, the lab will function as a nodal centre for training students of science, humanities and engineering for data curation, analysis and releases. Further, the project envisages multidisciplinary collaboration among faculty members in India and abroad to work towards open data practices and assist interested government departments and industries to convert their data into Linked Open Data (LOD) format.</p>
     <hr>
