--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <h4><b>Our Works</b></h4><br>
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
-        <img src="1.jfif" alt="Norway" style="width:100%" class="w3-hover-opacity">
+        <a href="student.html"><img src="1.jfif" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
         <div class="w3-container w3-white">
-          <p><b>Student Enrolment For Various Streams In Kerala</b></p>
+          <a href="student.html"><p><b>Student Enrolment For Various Streams In Kerala</b></p></a>
           <p>This is the plots and graphs that were generated from the Higher Education Data gathered.</p>
         </div>
       </div><br>
