--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div class="w3-main" style="margin-left:300px">
 
   <!-- Header -->
-  <header id="portfolio">
+  <header>
     <a href="#"><img src="Open.png" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
@@ -46,7 +46,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
   </header>
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <div id="portfolio" class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>Our Works</b></h4><br>
     <div class="w3-row-padding">
       <div class="w3-third w3-container w3-margin-bottom">
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <p>This is the plots and graphs that were generated from the Higher Education Data gathered.</p>
         </div>
       </div><br>
-      <div class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
+      <div id="about" class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
     <h4><b>About Us</b></h4>
     <p>This project proposes to set up practices and framework for releasing public data in the Linked Open Data for the State of Kerala. In this regard, we propose to establish an Open Data Laboratory at Government College Kasaragod. Further, the lab will function as a nodal centre for training students of science, humanities and engineering for data curation, analysis and releases. Further, the project envisages multidisciplinary collaboration among faculty members in India and abroad to work towards open data practices and assist interested government departments and industries to convert their data into Linked Open Data (LOD) format.</p>
     <hr>
