--- a/student.html
+++ b/student.html
@@ -182,7 +182,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         </script>
       <br>
       <div class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
-      <center><a href="Student Data.ods" download="GFG">
+      <center><a href="Student Data.ods" download="Student Data">
       <button type="button">Download Data</button>
       </a></center>
     <hr>
