--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <a href="student.html"><p><b>Student Enrolment For Various Streams In Kerala</b></p></a>
           <p>This is the plots and graphs that were generated from the Higher Education Data gathered.</p>
         </div>
+      </div>
+      <div class="w3-third w3-container w3-margin-bottom">
+        <a href="student.html"><img src="solidagri.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <a href="student.html"><p><b>Data About Solid Waste and Agriculture</b></p></a>
+          <p>This is the data about solid waste generation in Indian states and data about agriculture.</p>
+        </div>
       </div><br>
       <div id="about" class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
     <h4><b>About Us</b></h4>
