--- a/index.html
+++ b/index.html
@@ -57,10 +57,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         </div>
       </div>
       <div class="w3-third w3-container w3-margin-bottom">
-        <a href="student.html"><img src="solidagri.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
+        <a href="solid.html"><img src="solid waste.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
         <div class="w3-container w3-white">
-          <a href="student.html"><p><b>Data About Solid Waste and Agriculture</b></p></a>
-          <p>This is the data about solid waste generation in Indian states and data about agriculture.</p>
+          <a href="solid.html"><p><b>Data About Solid Waste Generation In India</b></p></a>
+          <p>This is the data about solid waste generation in India stateswise.</p>
+        </div>
+      </div>
+      <div class="w3-third w3-container w3-margin-bottom">
+        <a href="agriculture.html"><img src="agriculture.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <a href="agriculture.html"><p><b>Data About Agriculture In Different Countries</b></p></a>
+          <p>This is the data about agriculture in different countries.</p>
         </div>
       </div><br>
       <div id="about" class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
