--- a/solid.html
+++ b/solid.html
@@ -182,7 +182,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         </script>
       <br>
       <div class="w3-container w3-padding-large" style="margin-bottom:32px"></div>
-      <center><a href="solid waste generation in Indian states.xlsx" download="Student Data">
+      <center><a href="solid waste generation in Indian states.xlsx" download="Solid Waste Data">
       <button type="button">Download Data</button>
       </a></center>
     <hr>
